# PublicSphere-beta

./: .gitignore  .stignore  CLAUDE.md  Devlog.md  Note.md  README.md  Tomorrow's prompt  Tomorrow's prompt.md  cytoscape_demo.html  data_cont.md  flake.nix  postgresTranscript.txt  test_url_dedup.py  zprompt  zzprompt.txt
backend/: CLAUDE.md  cli.py  pyproject.toml
backend/PS_Django_DB/bookkeeper/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
backend/PS_Django_DB/bookkeeper/migrations/: 0001_initial.py  0002_edgeversion_composite_id_edgeversion_logic_type.py  0003_claimversion_sourceversion_delete_nodeversion_and_more.py  0004_claimversion_created_by_user_and_more.py  0005_alter_claimversion_unique_together_and_more.py  0006_commentversion_ratingversion.py  0007_alter_sourceversion_title.py  0008_require_source_title.py  0009_add_url_normalized.py  0010_add_search_fields.py  (+2 more)
backend/PS_Django_DB/common/: api_standards.py
backend/PS_Django_DB/config/: settings.py  urls.py
backend/PS_Django_DB/graph/: citation_fetcher.py  pdf_citation_fetcher.py  serializers.py  services.py  urls.py  utils.py  views.py
backend/PS_Django_DB/social/: admin.py  models.py  serializers.py  services.py  urls.py  validators.py  views.py
backend/PS_Django_DB/users/: admin.py  models.py  serializers.py  services.py  tokens.py  urls.py  views.py
backend/PS_Graph_DB/: run_test.py
backend/PS_Graph_DB/src/: database.py  language.py  logging.py  schema.py
backend/backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+669 files in other folders)
