[project]
name = "backend"
version = "0.1.0"
description = "PublicSphere Backend"
requires-python = ">=3.11"
dependencies = [
    "django==5.2.8",
    "djangorestframework==3.16.1",
    "psycopg2-binary==2.9.10",
]

[project.optional-dependencies]
dev = [
    "pip-audit>=2.7.0",
    "bandit>=1.7.0",
]

[project.scripts]
cli = "cli:main"

[tool.setuptools.packages.find]
include = ["*"]
